2008-01-18  Jürg Billeter  <j@bitron.ch>

	* gobject-introspection/gidlparser.c,
	  gobject-introspection/scannerlexer.l,
	  gobject-introspection/scannerparser.y: support C99 _Bool type

2008-01-18  Jürg Billeter  <j@bitron.ch>

	* vala/scanner.l: support nested generic types, fixes bug 443522

2008-01-18  Jürg Billeter  <j@bitron.ch>

	* vala/valavoidtype.vala: implement get_cname method

	* gobject/valaccodegenerator.vala: cast function pointers to callback
	  type, fixes bug 510262

2008-01-18  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gio-2.0/: fix memory leaks in g_file_new_for_* binding,
	  fixes bug 509884

	* vapi/gio-2.0.vapi: regenerated

2008-01-18  Jürg Billeter  <j@bitron.ch>

	* vala/valainterfacewriter.vala: write [NoArrayLength] for fields

	* vapigen/valagidlparser.vala: set no_array_length for fields

	* vapi/packages/gtk+-2.0/: fix GtkRecentData binding, fixes bug 509168

	* vapi/gdk-2.0.vapi, vapi/gstreamer-0.10.vapi,
	  vapi/gstreamer-audio-0.10.vapi, vapi/gstreamer-dataprotocol-0.10.vapi,
	  vapi/gstreamer-fft-0.10.vapi, vapi/gstreamer-net-0.10.vapi,
	  vapi/gstreamer-netbuffer-0.10.vapi, vapi/gstreamer-rtsp-0.10.vapi,
	  vapi/gstreamer-tag-0.10.vapi, vapi/gtk+-2.0.vapi, vapi/hildon-1.vapi,
	  vapi/vte.vapi: regenerated

2008-01-18  Jürg Billeter  <j@bitron.ch>

	* vala/valacodenode.vala, vala/valasemanticanalyzer.vala: don't output
	  full source file path in generated C code

2008-01-18  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegenerator.vala: don't generate public setter for
	  construct-only properties, fixes bug 479062

2008-01-18  Jürg Billeter  <j@bitron.ch>

	* vala/scanner.l, vala/parser.y: support pointers as generic type
	  arguments

2008-01-18  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegenerator.vala: fix iteration over collections
	  passed by ref parameter using foreach,
	  patch by Hans Vercammen, fixes bug 510419

2008-01-18  Jürg Billeter  <j@bitron.ch>
